# RestAPIProject-Server

./: .gitignore  README.md  REST.json
src/: CMakeLists.txt  Serwer.pro  connection.cpp  connection.h  database.cpp  database.h  databaseadaptor.cpp  databaseadaptor.h  exception.cpp  exception.h  http_codes.cpp  http_codes.h  iconnectionadaptor.cpp  iconnectionadaptor.h  iserializable.cpp  iserializable.h  main.cpp  server.cpp  server.h  user.cpp  user.h
